--- a/Ex20240514/src/main/webapp/css/Login.css
+++ b/Ex20240514/src/main/webapp/css/Login.css
@@ -28,5 +28,91 @@ h2.tit03{ /*개인회원 타이틀 이미지*/
 h2.tit04{ /*단체회원 타이틀 이미지*/
     width: 290px;
     height: 75px;
-    background-position: 0 -155px;
+    background-position: 0 -160px;
+}
+
+.login_area{
+    width: 750px;
+    height: 205px;
+    margin: 30px auto;
+    padding: 20px 70px;
+
+    background: url("../images/login_bg.png") no-repeat;
+
+    position: relative;
+}
+
+.person_login{
+    display: inline-block;
+    width: 290px;
+
+}
+
+
+.group_login{
+    display: inline-block;
+    width: 290px;
+    position: absolute;
+    right: 70px;
+}
+
+.login{
+    padding: 15px 0;
+    position: relative; /*로그인 버튼을 우측으로 붙이기 위해*/
+}
+
+.login .input_area{
+    display: inline-block;
+
+}
+
+.login .input_area>p{
+    padding: 3px 0;
+    text-align: right;
+
+}
+
+.login .input_area>p>label{
+    display: inline-block;
+    width: 55px;
+    background: url("../images/bult.png") no-repeat 0 -77px;
+    padding-left: 10px;
+}
+
+
+.login .input_area>p>input{
+    width: 110px;
+    padding: 5px;
+    border: 1px solid rgb(192, 192, 192);
+    border-radius: 8px;
+}
+
+
+
+.btn_area{
+    display: inline-block;
+    width: 86px;
+    height: 56px;
+    overflow: hidden;
+    position: absolute;
+    top: 20px;
+    right: 0;
+}
+
+.login_search{
+    margin-top: 10px;
+    /* padding-top: 10px; */
+    border-top: 1px solid rgb(224, 224, 224);
+    position: relative;
+}
+
+.login_search .checkbox{
+    position: absolute;
+    top: 10px;
+}
+
+.b_search{
+    position: absolute;
+    right: 0;
+    top: 3px;
 }
